--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -1,28 +1,9 @@
 {% extends "base.html" %}
 {% block title %}Каталог{% endblock %}
 {% block content %}
-<div class="container mt-4">
-    <form id="catalog-search" action="{{ url_for('catalog') }}" method="get" class="d-flex mb-3">
-        <input type="text" name="q" class="form-control me-2" placeholder="Іздеу..." value="{{ query }}">
-        <button type="submit" class="btn btn-primary btn-custom">Іздеу</button>
-    </form>
-
-  
-</div>
-
 
 <div class="container mt-4">
-    <h2>Мұғалімдер каталогы</h2>
-    <div class="container mt-4">
-    <form id="catalog-search" action="{{ url_for('catalog') }}" method="get" class="d-flex mb-3">
-        <input type="text" name="q" class="form-control me-2" placeholder="Іздеу..." value="{{ query }}">
-        <button type="submit" class="btn btn-primary btn-custom">Іздеу</button>
-    </form>
-
-  
-</div>
-
-    <div class="row mt-3">
+    <h2>Мұғалімдер каталогы</
         {% for teacher in teachers %}
         <div class="col-md-4 mb-4">
             <div class="teacher-card">
